Uploaded image for project: 'Qt Solutions'
  1. Qt Solutions
  2. QTSOLBUG-146

QtSingleApplication .h files do not contain multiple inclusion protection

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Some Release
    • Release 2
    • Single Application
    • None
    • 0a4e8a15fc26005ab59bed6ee2c2eadb58915f6d

    Description

      The header files (.h) found in the source for QtSingleApplication do not contain "sentinels" the prevent multiple inclusion. That is, constructs of the following form are missing:

      #if !defined(QTSINGLEAPPLICATION_H)
      #define QTSINGLEAPPLICATION_H
      
      // remainder of the qtsingleapplication.h file
      
      #endif
      

      This affects the following files that are included (at least) in qtsingleapplication-2.6_1-commercial.zip:

      • qtsingleapplication.h
      • qtsignlecoreapplication.h
      • qtlocalpeer.h

      (qtlockedfile.h does contain sentinels)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            buddenha Oswald Buddenhagen
            jb4 Jay Burns IV
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes