Added multiple inclusion protection in .h files.

Task-number: QTSOLBUG-146
Merge-request: 4
Reviewed-by: ossi