qtbrowserplugin/src/qtbrowserplugin.h
@@ -37,8 +37,8 @@
 **
 ****************************************************************************/
 
-#ifndef QTNETSCAPE_H
-#define QTNETSCAPE_H
+#ifndef QTBROWSERPLUGIN_H
+#define QTBROWSERPLUGIN_H
 
 #include <QtCore/QMetaObject>
 #include <QtCore/QFile>
@@ -174,4 +174,4 @@ QtNPFactory *qtns_instantiate() { return new QtNPClassList; } \
 #define QTNPFACTORY_EXPORT(Class) \
 QtNPFactory *qtns_instantiate() { return new Class; }
 
-#endif  // QTNETSCAPE_H
+#endif // QTBROWSERPLUGIN_H
