qtbrowserplugin/src/qtbrowserplugin_p.h
@@ -37,6 +37,9 @@
 **
 ****************************************************************************/
 
+#ifndef QTBROWSERPLUGIN_P_H
+#define QTBROWSERPLUGIN_P_H
+
 #include <QtCore/QVariant>
 #include <QtCore/QMutexLocker>
 #include <QtGui/QWidget>
@@ -93,3 +96,5 @@ struct QtNPInstance
         }
 
 };
+
+#endif // QTBROWSERPLUGIN_P_H
