qtsingleapplication/src/qtsingleapplication.h
@@ -37,6 +37,8 @@
 **
 ****************************************************************************/
 
+#ifndef QTSINGLEAPPLICATION_H
+#define QTSINGLEAPPLICATION_H
 
 #include <QtGui/QApplication>
 
@@ -96,3 +98,5 @@ private:
     QtLocalPeer *peer;
     QWidget *actWin;
 };
+
+#endif // QTSINGLEAPPLICATION_H
