qtsingleapplication/src/qtsinglecoreapplication.h
@@ -37,6 +37,8 @@
 **
 ****************************************************************************/
 
+#ifndef QTSINGLECOREAPPLICATION_H
+#define QTSINGLECOREAPPLICATION_H
 
 #include <QtCore/QCoreApplication>
 
@@ -64,3 +66,5 @@ Q_SIGNALS:
 private:
     QtLocalPeer* peer;
 };
+
+#endif // QTSINGLECOREAPPLICATION_H
